# data-quality-framework

./: .gitignore  README.md  pyproject.toml
dq_config/specs/: orders.yaml
dq_core/: checks.py  load_seed.py  spec_loader.py
dq_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample_data/: orders.csv
tests/: test_from_yaml.py  test_nulls.py  test_uniqueness.py
