[project]
name = "dq-framework"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "sqlalchemy>=2.0.0",
  "pandas>=2.2.0",
]

[tool.pytest.ini_options]
addopts = "-q --html=artifacts/report.html --self-contained-html"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Do not expect file_or_dir:UserWarning"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dq_core"]
